# DesignPatterns

./: .gitignore  README.md
c1_DuckSim/: CMakeLists.txt  README.md
c1_DuckSim/inc/: Duck.h
c1_Strategy/: CMakeLists.txt  main.cpp
c1_Strategy/inc/: Duck.h  FlyBehavior.h  QuackBehavior.h
c1_Strategy/src/: Duck.cpp  FlyBehavior.cpp  QuackBehavior.cpp
c2_Observer/: README.md
c2_Observer/inc/: DisplayElements.h  ObsDesign.h
c2_Observer/src/: ObsDesign.cpp  WeatherData.cpp
c2_WeatherStation/: CMakeLists.txt  main.cpp
c2_WeatherStation/inc/: WeatherData.h
c2_WeatherStation/src/: DisplayElements.cpp
c3_Decorator/: CMakeLists.txt  main.cpp
c3_Decorator/src/: Condiments.cpp
c3_StarBuzzCoffee/: README.md
c3_StarBuzzCoffee/inc/: Beverages.h  Condiments.h
c3_StarBuzzCoffee/src/: Beverages.cpp
c4_Factory/inc/: Pizza.h  PizzaStore.h
c4_Factory/src/: Pizza.cpp
c4_PizzaStore/: CMakeLists.txt  main.cpp
c4_PizzaStore/src/: PizzaStore.cpp
